--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,13 +12,14 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Selection color */
+/** Selection color */
 ::selection {
   background: #10b981;
+  color: #1f1f1f;
   opacity: 0.5;
 }
 
-/* Custom scroll bar */
+/** Custom scroll bar */
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -33,4 +34,52 @@ html {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #10b981;
+}
+
+/** Custom dark gray text stroke */
+.text-outline-secondary {
+  color: #1f1f1f;
+  -webkit-text-stroke-width: 5px;
+  -webkit-text-stroke-color: #393939;
+}
+
+/** Pulsing emerald stroke effect */
+.animate-pulse-emerald {
+  animation: pulse 7s infinite ease-in-out;
+  color: #1f1f1f;
+  -webkit-text-stroke-width: 5px;
+  -webkit-animation: animate-pulse-emerald 7s infinite ease-in-out;
+  -moz-animation: animate-pulse-emerald 7s infinite ease-in-out;
+  -o-animation: animate-pulse-emerald 7s infinite ease-in-out;
+  -ms-animation: animate-pulse-emerald 7s infinite ease-in-out;
+}
+
+@keyframes animate-pulse-emerald {
+  0%,
+  100% {
+    -webkit-text-stroke-color: #393939;
+    opacity: 0.9;
+  }
+  50% {
+    -webkit-text-stroke-color: rgba(16, 185, 129, 0.5);
+    opacity: 1;
+  }
+}
+
+/** Fade in effect */
+.fade-in {
+  animation: fadeIn ease 3s;
+  -webkit-animation: fadeIn ease 3s;
+  -moz-animation: fadeIn ease 3s;
+  -o-animation: fadeIn ease 3s;
+  -ms-animation: fadeIn ease 3s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
